--- a/src/scss/views/pdp.scss
+++ b/src/scss/views/pdp.scss
@@ -1,4 +1,4 @@
-.template--product-Yonder-dev {
+.template--product-Yonder-dev,.template--product-yonder-dev {
 
   .sticky-product-gallery{
     product-gallery{
@@ -743,7 +743,7 @@
 
 
 //working on spacing between elemnts
-.template--product-Yonder-dev{
+.template--product-Yonder-dev,.template--product-yonder-dev{
   .product-info__block-list{
     .product-info__block-item[data-block-type="title-with-rating"]{
       margin-block-end: 0.813rem;
